...
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CBg-O9-0Aw">
                        <rect key="frame" x="126.5" y="77" width="67" height="40"/>
                        <constraints>
                            <constraint firstAttribute="width" constant="67" id="FVf-Q3-Gv4"/>
                            <constraint firstAttribute="height" constant="40" id="vwh-CC-hZf"/>
                        </constraints>
                        <state key="normal" title="Button"/>
                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
                    </button>
                </subviews>
                <constraints>
                    <constraint firstItem="6z5-pw-Lke" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="31I-YO-6wv"/>
                    <constraint firstItem="CBg-O9-0Aw" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="PzH-Uy-2ps"/>
...
