//
//  SeSACWeek23UITests.swift
//  SeSACWeek23UITests
//
//  Created by 노건호 on 2022/02/28.
//

import XCTest

class SeSACWeek23UITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()    // 앱 실행시키는 것
        
        app.staticTexts["first"].tap()
        app.staticTexts["Button"].tap()
        
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
    func testViewControllerTransition() throws {
        let app = XCUIApplication()
        app.launch()    // 앱 실행시키는 것
        
        app.staticTexts["first"].tap()
        app.staticTexts["second"].tap()
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                                                XCUIApplication().launch()
            }
        }
    }
}
